Content changes for final comments

--- a/app/views/final-comments/v2/supporting-check.html
+++ b/app/views/final-comments/v2/supporting-check.html
@@ -24,7 +24,7 @@
           classes: '',
           fieldset: {
             legend: {
-              html: 'Do you want to upload supporting documents for your appeal?',
+              html: 'Do you have any supporting documents for your appeal?',
               classes: 'govuk-fieldset__legend--l',
               isPageHeading: true
             }
