--- a/app/views/final-comments/v2/final-comments.html
+++ b/app/views/final-comments/v2/final-comments.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% set title = "Your comments for the appeal" %}
+{% set title = "Your final comments" %}
 
 {% block pageTitle %}
   {{title}} - Tell us about the appeal site - GOV.UK
@@ -25,27 +25,23 @@
       <div class="govuk-form-group">
 
         <!-- reasons by file -->
-        <label class="govuk-label govuk-label--l" for="enforcement-ground-a-reasons">
+        <label class="govuk-label govuk-label--l" for="final-comments">
           {{ title  }}
         </label>
 
-        {# <div class="govuk-body">
-          This is the last time you can comment on the appeal or add updated documents.
+        <div class="govuk-body">
+          Comments should be related to the local planning authority’s statement or comments from interested parties.
         </div>
 
         <p class="govuk-body">
-          Your comments should be related to the local planning department statement or interested party comments. Give facts to support your argument.
-        <p>
-
-        <p class="govuk-body">
-          You do not need to repeat the local planning authority’s reasons for issuing the enforcement notice.
+          You do not need to repeat the local planning authority’s reasons.
         <p>
 
         <p class="govuk-body">
           You can upload documents to support your appeal or provide a statement later.
-        <p> #}
+        <p>
 
-        <textarea class="govuk-textarea govuk-js-character-count" id="enforcement-ground-a-reasons" name="enforcement-ground-a-reasons" rows="5" aria-describedby="enforcement-ground-a-reasons-hint"></textarea>
+        <textarea class="govuk-textarea govuk-js-character-count" id="final-comments" name="final-comments" rows="5" aria-describedby="final-comments-hint"></textarea>
 
       </div>
 
