--- a/app/views/lawful-development-certificate/v1/cya/index.html
+++ b/app/views/lawful-development-certificate/v1/cya/index.html
@@ -440,7 +440,7 @@
                 }
               ]
             }
-          },
+          } if data['decision-check'] != 'No',
           {
             key: {
               html: 'Add new plans or drawings'
