--- a/app/views/enforcement/v8/contact-details/appellant-name.html
+++ b/app/views/enforcement/v8/contact-details/appellant-name.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% set title = "What is the person’s name?" %}
+{% set title = "What’s the person’s name?" %}
 
 {% block pageTitle %}
   {{title}} - GOV.UK
