--- a/app/views/final-comments/v2/documents-email.html
+++ b/app/views/final-comments/v2/documents-email.html
@@ -51,13 +51,12 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
     </h2>
 
     <p class="govuk-body">
-      You can respond to the statement in writing. This is called your 'final comments'.
+      You can respond to the statement in writing. This is called your ‘final comments’.
     </p>
-
 
     <ol class="govuk-list govuk-list--number">
       <li>
-        Go to the link to receive a code: <a href="input-code" class="govuk-link">www.gov.uk/appeal-a-planning-decision/continue?app=hgdsuyts6t16f</a>
+        Go to the link to receive a code: <a href="input-code" class="govuk-link">www.gov.uk/appeal-a-planning-decision/final-comments?app=d81vW7td12s4t5gff728y29</a>
       </li>
 
       <li>
