Service unavailable page, first draft

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -33,6 +33,45 @@
             <div class="govuk-accordion__section-header">
               <h2 class="govuk-accordion__section-heading">
                 <span class="govuk-accordion__section-button" id="accordion-default-heading-finalcomments">
+                  Service unavailable
+                </span>
+              </h2>
+            </div>
+            <div id="accordion-default-content-finalcomments" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-finalcomments">
+
+              <div class="govuk-grid-row">
+                <div class="govuk-grid-column-full">
+
+                  <div class="govuk-inset-text govuk-!-margin-top-0">
+                    <h3 class="govuk-heading-s">
+                      Service unavailable
+                      {{ govukTag({
+                        classes: "govuk-tag--red govuk-!-margin-left-1",
+                        text: "In progress"
+                      }) }}
+                    </h3>
+                    <ul class="govuk-list govuk-list--bullet">
+                      <li>
+                        <a href="/service-unavailable/v1/" title="">Service unavailable page</a>
+                      </li>
+                    </ul>
+
+                    <a href="https://pins-ds.atlassian.net/browse/AS-5395">AS-5395 Design ‘Service unavailable’ page</a></li>
+
+                  </div>
+
+                </div>
+              </div>
+
+            </div>
+          </div>
+
+
+          <!-- final comments -->
+          <div class="govuk-accordion__section">
+            <div class="govuk-accordion__section-header">
+              <h2 class="govuk-accordion__section-heading">
+                <span class="govuk-accordion__section-button" id="accordion-default-heading-finalcomments">
                   Final Comments
                 </span>
               </h2>
