Agent working tweak

--- a/app/views/lawful-development-certificate/v1/contact-details/agent-details.html
+++ b/app/views/lawful-development-certificate/v1/contact-details/agent-details.html
@@ -16,7 +16,7 @@
     name: 'agency-check',
     fieldset: {
       legend: {
-        html: 'Do you work for another company acting on behalf of the applicant?',
+        html: 'Are you an agent working at a registered company?',
         classes: 'govuk-fieldset__legend--l',
         isPageHeading: true
       }
