Final comment updates

--- a/app/views/final-comments/v2/input-code.html
+++ b/app/views/final-comments/v2/input-code.html
@@ -48,7 +48,7 @@
           </p>
         </div>
 
-        {% include "includes/button-and-save-link.html" %}
+        {% include "includes/button.html" %}
 
       </form>
 
