--- a/app/views/final-comments/v2/supporting-check.html
+++ b/app/views/final-comments/v2/supporting-check.html
@@ -43,7 +43,7 @@
           ]
         }) }}
 
-        {% include "includes/button-and-save-link.html" %}
+        {% include "includes/button.html" %}
 
       </form>
     </div>
