--- a/app/views/final-comments/v2/final-comments-question.html
+++ b/app/views/final-comments/v2/final-comments-question.html
@@ -7,10 +7,6 @@
     },
     html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
   }) }}
-  {{ govukBackLink({
-    text: "Back",
-    href: "javascript:history.go(-1);"
-  }) }}
 {% endblock %}
 
 {% block content %}
@@ -19,26 +15,29 @@
       <form method="post">
 
         {{ govukRadios({
-          idPrefix: 'supporting-check',
-          name: 'supporting-check',
+          idPrefix: 'adding-final-comments',
+          name: 'adding-final-comments',
           classes: '',
           fieldset: {
             legend: {
-              html: 'Do you have any supporting documents for your appeal?',
+              html: 'Do you want to submit final comments?',
               classes: 'govuk-fieldset__legend--l',
               isPageHeading: true
             }
+          },
+          hint: {
+            text: "You can upload  documents to support your appeal later"
           },
           items: [
             {
               html: 'Yes',
               value: 'Yes',
-              checked: checked('supporting-check','Yes')
+              checked: checked('adding-final-comments','Yes')
             },
             {
               html: 'No',
               value: 'No',
-              checked: checked('supporting-check','No')
+              checked: checked('adding-final-comments','No')
             }
           ]
         }) }}
