--- a/app/views/final-comments/v2/input-code.html
+++ b/app/views/final-comments/v2/input-code.html
@@ -52,6 +52,15 @@
 
       </form>
 
+      <!-- this is a prototype only link -->
+      <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-9 govuk-!-margin-top-9">
+        <p class="govuk-body-s pins-prototype-only">
+          <a href="appeal-closed-for-comments">
+            Appeal closed for comments
+          </a>
+        </p>
+      </div>
+
     </div>
   </div>
 
