More index links for the final comments journey

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,7 +28,7 @@
 
         <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
 
-          <!-- final comments -->
+          <!-- service down page -->
           <div class="govuk-accordion__section">
             <div class="govuk-accordion__section-header">
               <h2 class="govuk-accordion__section-heading">
@@ -66,7 +66,6 @@
             </div>
           </div>
 
-
           <!-- final comments -->
           <div class="govuk-accordion__section">
             <div class="govuk-accordion__section-header">
@@ -85,13 +84,55 @@
                     <h3 class="govuk-heading-s">
                       Final comments v2
                       {{ govukTag({
-                        classes: "govuk-tag--red govuk-!-margin-left-1",
-                        text: "In progress"
+                        classes: "govuk-tag--green  govuk-!-margin-left-1",
+                        text: "Ready for build"
                       }) }}
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
                       <li>
-                        <a href="/final-comments/v2/documents-email" title="">Final documents for the appeal (Case Officer cross copy)</a>
+                        <a href="/final-comments/v2/documents-email">
+                          Final documents for the appeal (Case Officer cross copy)
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/final-comments/v2/input-code">
+                          Input the code (save and return)
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/final-comments/v2/appeal-closed-for-comments">
+                          Appeal is closed for comments
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/final-comments/v2/final-comments-question">
+                          Do you want to submit final comments?
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/final-comments/v2/final-comments">
+                          Your final comments?
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/final-comments/v2/documents-check">
+                          Do you want to submit final comments?
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/final-comments/v2/documents-upload">
+                          Additional documents
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/final-comments/v2/confirmation">
+                          Appeal submitted
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/final-comments/v2/final-comments-question">
+                          Do you want to submit final comments?
+                        </a>
                       </li>
                     </ul>
 
