--- a/app/views/lawful-development-certificate/v2/site-details/site-visibility.html
+++ b/app/views/lawful-development-certificate/v2/site-details/site-visibility.html
@@ -25,7 +25,7 @@
       }
     },
     hint: {
-      html: 'An Inspector may need to carry out a visit '
+      html: 'An inspector may need to carry out a visit '
     },
     items: [
       {
