Final comments word count

--- a/app/views/final-comments/v2/documents-check.html
+++ b/app/views/final-comments/v2/documents-check.html
@@ -34,8 +34,9 @@
             </p> #}
 
             <p class="govuk-hint">
-              Do not include new evidence
+              Your appeal will take longer if you add new evidence, we’ll ask you to remove it and resubmit
             </p>
+
             <div class="govuk-radios" data-module="govuk-radios">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="supporting-check" name="supporting-check" type="radio" value="Yes">
