--- a/app/views/final-comments/v2/final-comments.html
+++ b/app/views/final-comments/v2/final-comments.html
@@ -23,32 +23,45 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-l">
-      {{ title  }}
-    </h1>
-    <p class="govuk-body">
-      Before you start:
-    </p>
-    <ul class="govuk-list govuk-list--bullet">
-      <li>only comment on the statements from the local planning authority or interested parties</li>
-      <li>remove any sensitive or personal information</li>
-      <li>do not include any new evidence</li>
-    </ul>
 
-    {% set sensitiveHtml %}
-      
-      <p class="govuk-body">
-        Sensitive information refers to:
-      </p>
-      {% include "includes/sensitive-info-list.html" %}
-    {% endset -%}
-
-    {{ govukDetails({
-      summaryText: "What is sensitive information?",
-      html: sensitiveHtml
-    }) }}
     <form method="post">
-      <textarea class="govuk-textarea govuk-js-character-count" id="final-comments" name="final-comments" rows="5" aria-describedby="final-comments-hint"></textarea>
+
+      <div class="govuk-character-count" data-module="govuk-character-count" data-maxwords="3000">
+        <div class="govuk-form-group">
+          <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="final-comments">
+              {{ title }}
+            </label>
+          </h1>
+          <p class="govuk-body">
+            Before you start:
+          </p>
+          <ul class="govuk-list govuk-list--bullet">
+            <li>only comment on the statements from the local planning authority or interested parties</li>
+            <li>remove any sensitive or personal information</li>
+            <li>do not include any new evidence</li>
+          </ul>
+
+          {% set sensitiveHtml %}
+
+            <p class="govuk-body">
+              Sensitive information refers to:
+            </p>
+            {% include "includes/sensitive-info-list.html" %}
+          {% endset -%}
+
+          {{ govukDetails({
+            summaryText: "What is sensitive information?",
+            html: sensitiveHtml
+          }) }}
+          <textarea class="govuk-textarea govuk-js-character-count" id="final-comments" name="final-comments" rows="6" aria-describedby="final-comments-info"></textarea>
+        </div>
+
+        <div id="final-comments-info" class="govuk-hint govuk-character-count__message">
+          You can enter up to 3000 words
+        </div>
+
+      </div>
+
       {% include "includes/button.html" %}
     </form>
   </div>
