--- a/app/views/lawful-development-certificate/v2/uploads/application.html
+++ b/app/views/lawful-development-certificate/v2/uploads/application.html
@@ -2,7 +2,7 @@
 
 {% block questions %}
   <h1 class="govuk-heading-l">
-    Upload your application made to the local planning authority
+    Upload your application form sent to the local planning authority
   </h1>
 
   <p>If you do not have your application form, you can find it by searching for your applications on your local planning authority&rsquo;s website.</p>
@@ -34,15 +34,6 @@
     },
     uploadHtml: uploadHtml
   }) }}
-{% endblock %}
-
-{% block notes %}
-  {# <h2 class="govuk-heading-m">
-    Design notes
-  </h2>
-  <ul class="govuk-list">
-    <li></li>
-  </ul> #}
 {% endblock %}
 
 {% block pageScripts %}
