Small changes to Case Officer code journey

--- a/app/views/final-comments/v2/case-officer/appeal-link.html
+++ b/app/views/final-comments/v2/case-officer/appeal-link.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% set serviceName = "Manage planning appeals" %}
+{% set serviceName = "Make a beta service appeal link" %}
 
 {% set title = "Link to the appeal" %}
 
@@ -54,7 +54,7 @@
 
           <ol class="govuk-list govuk-list--number">
             <li>
-              Go to the link to receive a code: <a href="input-code" class="govuk-link">www.gov.uk/appeal-a-planning-decision/final-comments?app=d81vW7td12s4t5gff728y29</a>
+              Go to the link to receive a code: <a href="../input-code" class="govuk-link">www.gov.uk/appeal-a-planning-decision/final-comments?app=d81vW7td12s4t5gff728y29</a>
             </li>
 
             <li>
