--- a/app/views/final-comments/v2/case-officer/appeal-not-found.html
+++ b/app/views/final-comments/v2/case-officer/appeal-not-found.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% set serviceName = "Manage planning appeals" %}
+{% set serviceName = "Make a beta service appeal link" %}
 
 {% set title = "Appeal not found" %}
 
