--- a/app/views/final-comments/v2/case-officer/appeal-search.html
+++ b/app/views/final-comments/v2/case-officer/appeal-search.html
@@ -1,7 +1,7 @@
 {% set pageref = "" %}
 {% extends "layout.html" %}
 
-{% set serviceName = "Manage planning appeals" %}
+{% set serviceName = "Make a beta service appeal link" %}
 
 {% set title = "What’s the appeal reference number?" %}
 
