linked to research for last sprint

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -70,10 +70,11 @@
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-3">
                       Version {{version}}
                       {{ govukTag({
-                        classes: "govuk-tag--pink govuk-!-margin-left-1",
-                        text: "WIP"
+                        classes: "govuk-tag--blue govuk-!-margin-left-1",
+                        text: "Researched"
                       }) }}
                     </h3>
+                    <p><a href="https://miro.com/app/board/uXjVPYjjAos=/">Miro board with research findings</a></p>
                     <ul class="govuk-list govuk-list--bullet">
                       <li><a href="/lawful-development-certificate/v{{version}}/before-you-start/">Before you start</a></li>
                       <li><a href="/lawful-development-certificate/v{{version}}/before-you-start/cya">Before you start: Check your answers</a></li>
