--- a/app/views/index.html
+++ b/app/views/index.html
@@ -58,7 +58,7 @@
                     <ul class="govuk-list govuk-list--bullet">
                       {# <li><a href="/lawful-development-certificate/v{{version}}/before-you-start/">Before you start</a></li> #}
                       {# <li><a href="/lawful-development-certificate/v{{version}}/before-you-start/cya">Before you start: Check your answers</a></li> #}
-                      <li><a href="/lawful-development-certificate/v{{version}}/task-list/">Task list</a></li>
+                      <li><a href="/lawful-development-certificate/v{{version}}/task-list">Task list</a></li>
                     </ul>
                   </div>
                   {# /VERSION 1 #}
