--- a/app/views/lawful-development-certificate/v2/before-you-start/cya.html
+++ b/app/views/lawful-development-certificate/v2/before-you-start/cya.html
@@ -42,7 +42,7 @@
               actions: {
                 items: [
                   {
-                    href: 'appeal-type',
+                    href: 'appeal-type?byscya=true',
                     text: 'Change'
                   }
                 ]
@@ -58,7 +58,7 @@
               actions: {
                 items: [
                   {
-                    href: 'lpa',
+                    href: 'lpa?byscya=true',
                     text: 'Change'
                   }
                 ]
@@ -74,7 +74,7 @@
               actions: {
                 items: [
                   {
-                    href: 'section',
+                    href: 'section?byscya=true',
                     text: 'Change'
                   }
                 ]
@@ -90,7 +90,7 @@
               actions: {
                 items: [
                   {
-                    href: 'application-date',
+                    href: 'application-date?byscya=true',
                     text: 'Change'
                   }
                 ]
@@ -106,7 +106,7 @@
               actions: {
                 items: [
                   {
-                    href: 'decision-check',
+                    href: 'decision-check?byscya=true',
                     text: 'Change'
                   }
                 ]
@@ -122,7 +122,7 @@
               actions: {
                 items: [
                   {
-                    href: 'decision-date',
+                    href: 'decision-date?byscya=true',
                     text: 'Change'
                   }
                 ]
