--- a/app/views/lawful-development-certificate/v2/save-and-return/confirmation-email.html
+++ b/app/views/lawful-development-certificate/v2/save-and-return/confirmation-email.html
@@ -7,7 +7,7 @@
     <strong>Subject:</strong> Confirm your email address
   </p>
   <p>
-    <strong>To:</strong> {{ data['save-email'] or 'liz@palace.com' }}<br>
+    <strong>To:</strong> {{ data['applicant-email'] }}<br>
     <strong>From:</strong> appeals@planninginspectorate.gov.uk
   </p>
   <p>
