--- a/app/views/lawful-development-certificate/v2/save-and-return/confirm.html
+++ b/app/views/lawful-development-certificate/v2/save-and-return/confirm.html
@@ -6,10 +6,12 @@
   </h1>
 
   {{ govukInsetText({
-    html: 'We&rsquo;ve sent an email to: '+data['save-email'] or 'liz@palace.com'
+    html: 'We&rsquo;ve sent an email to: '+data['applicant-email']
   }) }}
 
   <p>Go to your inbox to confirm that this is the correct email address. The link in the email will expire after 30 minutes.</p>
+
+  <p>If it is wrong you can <a href="../appeal-details/contact-details?saving=true">change the email address you entered</a>.</p>
 
   <h2 class="govuk-heading-m">
     If you&rsquo;re having problems
