Added invite journey

--- a/app/views/lawful-development-certificate/v2/task-list.html
+++ b/app/views/lawful-development-certificate/v2/task-list.html
@@ -12,7 +12,7 @@
       <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Manage your appeal</h2>
       <ul class="govuk-list">
         <li><a href="save-and-return/" class="govuk-link--no-visited-state">Save and complete later</a></li>
-        <li><a href="save-and-return/add-someone" class="govuk-link--no-visited-state">Invite someone else to add to your appeal</a></li>
+        <li><a href="invite/email-address" class="govuk-link--no-visited-state">Invite someone to your appeal</a></li>
       </ul>
 
       <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--xl">
